--- a/nodes/datahub-input.html
+++ b/nodes/datahub-input.html
@@ -245,9 +245,9 @@
             <input type="text" id="node-input-var-search" placeholder="Filter..." style="width:120px; font-size:11px; padding:2px;">
         </div>
         
-        <div style="display:grid; grid-template-columns: 30px 60px 1fr; background:#eee; font-size:11px; font-weight:bold; padding:4px 0; border-bottom:1px solid #ccc;">
+        <div style="display:grid; grid-template-columns: 30px 1fr; background:#eee; font-size:11px; font-weight:bold; padding:4px 0; border-bottom:1px solid #ccc;">
             <div style="text-align:center;"><i class="fa fa-check-square-o"></i></div>
-            <div style="text-align:center;">ID</div>
+            <!-- ID Column Removed -->
             <div style="padding-left:10px;">Name</div>
         </div>
 
