--- a/nodes/datahub-output.html
+++ b/nodes/datahub-output.html
@@ -134,7 +134,7 @@
     <dt>u-OS Config</dt>
     <dd>Connection node with host/port and OAuth credentials.</dd>
     <dt>Provider ID</dt>
-    <dd>The unique ID for this provider.</dd>
+    <dd>The unique ID for this provider. <b>Note:</b> You cannot use <code>u_os_sbm</code> (Reserved system name).</dd>
     <dd><b>Auto Mode:</b> Shows the <em>Client Name</em> from your Config. Uses this name automatically.</dd>
     <dt>Keep-Alive (s)</dt>
     <dd>Interval in seconds to refresh the provider definition. Default: <b>300s (5 min)</b>.</dd>
