docs: Add warning about local-only NATS usage

--- a/nodes/uos-config.html
+++ b/nodes/uos-config.html
@@ -230,6 +230,13 @@
 
   <h3>Troubleshooting</h3>
   
+  <p style="color:var(--red-ui-text-color-error); font-weight:bold; border:1px solid var(--red-ui-text-color-error); padding:5px; border-radius:3px;">
+      ⚠️ IMPORTANT:<br>
+      These nodes MUST run directly on the u-OS device (App/Snap).
+      The NATS server is NOT accessible from the outside.
+      You cannot use this node from a remote instance (e.g. Laptop).
+  </p>
+
   <h4>Test Connection fails</h4>
   <ul>
     <li>Check Host/Port are correct and device is reachable</li>
