Fix: Resolve Fingerprints for Dynamic Writes; Docs: Realistic SBM Examples (v1.3.63)

--- a/nodes/datahub-write.html
+++ b/nodes/datahub-write.html
@@ -255,7 +255,7 @@
             <code>
             {
                 "provider": "u_os_sbm",
-                "key": "machine.outputs.DO01",
+                "key": "ur20_8do_p_1.process_data.channel_7.do",
                 "value": true
             }
             </code>
